--- a/functional-analysis-tutorial.html
+++ b/functional-analysis-tutorial.html
@@ -36,15 +36,46 @@
 <h1>Functional Analysis: A Didactic Tutorial</h1>
 
 <div class="chapter" id="chapter-1">
-    <h2>Chapter 1: Real Analysis: A Quick Review</h2>
-    <p>This chapter revisits fundamental concepts of real analysis necessary for understanding functional analysis:</p>
-    <ul>
-        <li>Limits and continuity</li>
-        <li>Differentiation and integration</li>
-        <li>Metric spaces and completeness</li>
-    </ul>
+    <h2>Chapter 1: Real Analysis — A Quick Review</h2>
+    <p>This chapter reviews foundational concepts in real analysis which underpin the more abstract machinery of functional analysis. Even readers with strong mathematical backgrounds will benefit from a concise, structured refresher.</p>
+
+    <h3>1.1 Limits and Continuity</h3>
     <div class="definition">
-        <strong>Definition (Metric Space)</strong>: A metric space is a set \( X \) with a function \( d: X \times X \to [0,\infty) \) satisfying positivity, symmetry, and triangle inequality.
+        <strong>Definition (Limit):</strong> Let \( f: \mathbb{R} \to \mathbb{R} \). We say that \( \lim_{x \to a} f(x) = L \) if for every \( \varepsilon > 0 \), there exists \( \delta > 0 \) such that whenever \( 0 < |x - a| < \delta \), we have \( |f(x) - L| < \varepsilon \).
+    </div>
+    <p>Continuity is defined as the property that the function value and the limit coincide:</p>
+    <div class="definition">
+        <strong>Definition (Continuity):</strong> A function \( f \) is continuous at \( x = a \) if \( \lim_{x \to a} f(x) = f(a) \).</div>
+
+    <h3>1.2 Differentiation and Integration</h3>
+    <p>Differentiation measures local linear change. Integration aggregates values over intervals and extends to Lebesgue integration in more advanced contexts.</p>
+    <div class="example">
+        <strong>Example:</strong> The Fundamental Theorem of Calculus states that if \( f \) is continuous on \( [a,b] \), and \( F(x) = \int_a^x f(t)\,dt \), then \( F'(x) = f(x) \).
+    </div>
+
+    <h3>1.3 Metric Spaces</h3>
+    <div class="definition">
+        <strong>Definition (Metric Space):</strong> A metric space is a pair \( (X, d) \) where \( X \) is a set and \( d: X \times X \to [0, \infty) \) is a function satisfying:
+        <ul>
+            <li>\( d(x, y) = 0 \Leftrightarrow x = y \)</li>
+            <li>\( d(x, y) = d(y, x) \)</li>
+            <li>\( d(x, z) \leq d(x, y) + d(y, z) \) (Triangle Inequality)</li>
+        </ul>
+    </div>
+
+    <h3>1.4 Completeness</h3>
+    <div class="definition">
+        <strong>Definition (Complete Metric Space):</strong> A metric space \( (X, d) \) is complete if every Cauchy sequence in \( X \) converges to a limit in \( X \).
+    </div>
+    <div class="example">
+        <strong>Example:</strong> \( \mathbb{R} \) with the usual metric \( d(x,y) = |x - y| \) is a complete metric space.
+    </div>
+
+    <h3>1.5 Sequences and Series of Functions</h3>
+    <p>We distinguish between pointwise and uniform convergence:</p>
+    <div class="definition">
+        <strong>Definition (Uniform Convergence):</strong> A sequence \( \{f_n\} \) converges uniformly to \( f \) on \( D \) if:
+        \[ \forall \varepsilon > 0, \exists N \text{ such that } n \geq N \Rightarrow \sup_{x \in D} |f_n(x) - f(x)| < \varepsilon. \]
     </div>
 </div>
 
